@@ -162,6 +162,9 @@ line-col-zero-default:		no
 # cursor.
 display-special-fig-consts:	no
 
+# If yes, COMP-1 is a signed 16-bit integer and any PICTURE clause is ignored.
+binary-comp-1:			no
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
