@@ -1,4 +1,8 @@
 
+2017-11-10  Edward Hart <edward.dan.hart@gmail.com>
+
+	* general: added binary-comp-1 option (feature request #272).
+
 2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* general: FR #158 added perform-varying-without-by (COBOL2002+)
